# tensor-lines

./: .gitignore  LICENSE  Parallel Eigenvectors.ipynb  README.md
cpp/: CMakeLists.txt  ParallelEigenvectorsConfig.cmake.in  ParallelEigenvectorsConfigVersion.cmake.in  TensorLinesConfig.cmake.in  TensorLinesConfigVersion.cmake.in
cpp/CMake/modules/: FindCTPL.cmake
cpp/src/: BarycentricInterpolator.hh  BezierDoubleTriangle.hh  BezierTriangle.hh  CMakeLists.txt  Evaluator.hh  EvaluatorUtils.hh  ParallelEigenvectorDefinitions.hh  ParallelEigenvectors.cc  ParallelEigenvectors.hh  ParallelEigenvectorsEvaluator.cc  ParallelEigenvectorsEvaluator.hh  TensorCoreLinesEvaluator.cc  TensorCoreLinesEvaluator.hh  TensorField.hh  TensorLineDefinitions.hh  TensorLines.cc  TensorLines.hh  TensorLines.xml  TensorProductBezierTriangle.hh  TensorProductBezierTriangle1.hh  TensorProductBezierTriangle1.tcc  TensorProductBezierTriangle1_1.hh  TensorProductBezierTriangle1_1.tcc  TensorProductBezierTriangle1_2.hh  TensorProductBezierTriangle1_2.tcc  TensorProductBezierTriangle1_3.hh  TensorProductBezierTriangle1_3.tcc  TensorProductBezierTriangle2.hh  TensorProductBezierTriangle2.tcc  TensorProductBezierTriangle2_2.hh  TensorProductBezierTriangle2_2.tcc  TensorProductBezierTriangle3.hh  TensorProductBezierTriangle3.tcc  TensorSujudiHaimesEvaluator.cc  TensorSujudiHaimesEvaluator.hh  TensorTopologyEvaluator.cc  TensorTopologyEvaluator.hh  ansysexp_to_vtk.cc  filter_lines.cc  generate_collection_header.py  (+10 more)
cpp/src/tests/: CMakeLists.txt  CatchTests.cpp  Makefile  UnitTest.hh  UnitTests.cpp  UnitTests.hh
